@startuml
package System {
  class OdinSystem {
    Boolean learnedFlag
    Boolean randomFlag
    Integer listSize
    Integer listIndex
    + OdinSystem updateIndex()
    + OdinSystem resetIndex()
  }
}
package Application {
  class Term {
    Long identifier
    Word word
    Meaning meaning
    MemorizedState learnedFlag
  }
  class Word {
    String name
  }
  class Meaning {
    String context
  }
  enum MemorizedState {
    NOT_MEMORIZED
    MEMORIZED
  }
  Term o-- Word
  Term o-- Meaning
  Term -> MemorizedState
}

Application -- System

@enduml